--- a/src/app/features/website/leaderboards/leaderboards.component.html
+++ b/src/app/features/website/leaderboards/leaderboards.component.html
@@ -21,7 +21,7 @@
     <single-leaderboard
 
       class="w-full h-full"
-      [leaderboard]="scores.global"
+      [leaderboard]="Leaderboard.fromScores(scores.global)"
     ></single-leaderboard>
   } @else {
 
