--- a/src/app/features/website/leaderboards/single-leaderboard/single-leaderboard.component.html
+++ b/src/app/features/website/leaderboards/single-leaderboard/single-leaderboard.component.html
@@ -1,10 +1,10 @@
 <div class="w-full h-full flex-col flex gap-5">
 
   <div class="relative -z-10 w-full h-1/3 min-h-64 flex justify-around items-end px-4">
-    @for (participant of sortedTopThreeLeaderboard; track participant; let index = $index) {
+    @for (participant of leaderboard.topThree; track participant; let index = $index) {
       <div class="w-3/12 h-full flex flex-col justify-end items-center">
         <span class="material-icons-outlined text-3xl">account_circle</span>
-        <span class="font-bold">{{ participant.username }}</span>
+        <span class="font-bold">{{ participant.player }}</span>
         <span class="text text-gray-500"> {{ participant.points }}</span>
         <div
           [class]="{
@@ -19,7 +19,6 @@
     }
 
   </div>
-
   <div class="absolute z-10 overflow-scroll h-full w-full">
     <div class="rounded-2xl p-5 pt-4 mt-[80%] h-5/6 overflow-hidden  backdrop-blur
     w-full bg-white/60 flex flex-col justify-start items-center gap-4">
@@ -27,10 +26,10 @@
         class="w-1/5 border-2 border-gray-500 rounded-2xl "
       >
       </div>
-      @for (participant of leaderboard; track participant) {
+      @for (participant of leaderboard.participants | decorateParticipants; track participant) {
         <div class="flex border-b gap-4 border-gray-400/40 pb-3 w-full "
         >
-          <span class="w-1/12 text-3xl"> {{ participant.position }}</span>
+          <span class="w-1/12 text-3xl"> {{ participant.rank }}</span>
           <div class=" w-2/12 flex flex-col justify-center">
             <span class="">{{ participant.player }}</span>
           </div>
