--- a/src/app/features/website/leaderboards/leaderboards.component.html
+++ b/src/app/features/website/leaderboards/leaderboards.component.html
@@ -1,30 +1,51 @@
-<img
-  class="fixed w-full h-full top-0 left-0 -z-10  object-cover opacity-35"
-  src="../../../../assets/images/dddepth-342.jpg"
->
-<div class="w-full relative h-full overflow-hidden flex flex-col items-center gap-5">
-  <p class="text-3xl p-2">Classifica</p>
-  <div class="relative flex w-1/2 border border-gray-50 rounded-2xl p-0.5">
-    <div class="w-1/2 duration-300 transition-all text-center h-full rounded-2xl" (click)="tab = 'global'"
-         [class]="{'bg-gray-50/80': tab=='global'}"
-    >
-      Globale
-    </div>
-    <div class="w-1/2 duration-300 transition-all text-center h-full rounded-2xl" (click)="tab = 'games'"
-         [class]="{'bg-gray-50/80': tab=='games'}"
-    >
-      Giochi
-    </div>
-  </div>
+<div class="bg-gray-700 -z-10 fixed inset-0 w-full h-full">
 
-  @if (tab == 'global') {
-    <single-leaderboard
-
-      class="w-full h-full"
-      [leaderboard]="Leaderboard.fromScores(scores.global)"
-    ></single-leaderboard>
-  } @else {
-
-
-  }
 </div>
+
+
+<div class="flex w-full h-full shrink-0 items-center justify-center">
+
+  <div class="relative md:max-h-[800px] md:max-w-[390px]  w-full h-full">
+
+    <div class="max-md:hidden absolute rounded-l bg-black w-1.5 h-20 -left-1.5 top-36"></div>
+    <div class="max-md:hidden absolute rounded-l bg-black w-1.5 h-20 -left-1.5 top-60"></div>
+    <div class="max-md:hidden absolute rounded-r bg-black w-1.5 h-28 -right-1.5 top-44"></div>
+    <div class="relative md:pt-5 bg-white md:border-[9px] md:border-black md:rounded-[50px] overflow-hidden w-full h-full ">
+      <img
+        class="absolute w-full h-full -top-10 left-0 object-cover opacity-55"
+        src="../../../../assets/images/Sfondo.png"
+      >
+      <div class="w-full relative h-full overflow-hidden flex flex-col items-center gap-5">
+        <p class="text-3xl font-bold p-2">Classifica Generale</p>
+<!--        <div class="relative flex w-1/2 border border-gray-50 rounded-2xl p-0.5">-->
+<!--          <div class="w-1/2 duration-300 transition-all text-center h-full rounded-2xl" (click)="tab = 'global'"-->
+<!--               [class]="{'bg-gray-50/80': tab=='global'}"-->
+<!--          >-->
+<!--            Globale-->
+<!--          </div>-->
+<!--          <div class="w-1/2 duration-300 transition-all text-center h-full rounded-2xl" (click)="tab = 'games'"-->
+<!--               [class]="{'bg-gray-50/80': tab=='games'}"-->
+<!--          >-->
+<!--            Giochi-->
+<!--          </div>-->
+<!--        </div>-->
+
+        @if (tab == 'global') {
+          <single-leaderboard
+
+            class="w-full h-full"
+            [leaderboard]="Leaderboard.fromScores(scores.global)"
+          ></single-leaderboard>
+        } @else {
+
+
+        }
+      </div>
+
+    </div>
+
+  </div>
+</div>
+
+
+
