--- a/src/app/features/website/leaderboards/single-leaderboard/single-leaderboard.component.html
+++ b/src/app/features/website/leaderboards/single-leaderboard/single-leaderboard.component.html
@@ -1,9 +1,9 @@
 <div class="w-full h-full flex-col flex gap-5">
 
-  <div class="relative -z-10 w-full h-1/3 min-h-64 flex justify-around items-end px-4">
-    @for (participant of leaderboard.topThree; track participant; let index = $index) {
+  <div class="relative  w-full h-1/3 min-h-64 flex justify-around items-end px-4">
+    @for (participant of leaderboard.getTopThree(); track participant; let index = $index) {
       <div class="w-3/12 h-full flex flex-col justify-end items-center">
-        <span class="material-icons-outlined text-3xl">account_circle</span>
+<!--        <span class="material-icons-outlined text-3xl">account_circle</span>-->
         <span class="font-bold">{{ participant.player }}</span>
         <span class="text text-gray-500"> {{ participant.points }}</span>
         <div
@@ -12,8 +12,10 @@
           'h-1/2': index === 1,
           'h-2/6': index === 2
           }"
-          class="text-center flex justify-center items-center w-full backdrop-blur bg-sky-900/30 rounded-3xl">
-          {{ index + 1 }}
+          class="text-center
+           font-bold text-4xl
+           flex justify-center items-center w-full backdrop-blur bg-sky-900/30 rounded-3xl">
+          {{ index + 1 }}°
         </div>
       </div>
     }
@@ -21,7 +23,7 @@
   </div>
   <div class="absolute z-10 overflow-scroll h-full w-full">
     <div class="rounded-2xl p-5 pt-4 mt-[80%] h-5/6 overflow-hidden  backdrop-blur
-    w-full bg-white/60 flex flex-col justify-start items-center gap-4">
+    w-full bg-white/30 flex flex-col justify-start items-center gap-4">
       <div
         class="w-1/5 border-2 border-gray-500 rounded-2xl "
       >
