--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,16 @@
 ::-webkit-scrollbar {
   display: none;
 }
+html, body {
+  font-family: 'MuseoModerno', sans-serif;
+}
+* {
+  font-family: 'MuseoModerno', sans-serif;
+}
+
+@font-face {
+  font-family: 'MuseoModerno'; /* Define the font family name */
+  src: url('assets/fonts/MuseoModerno-VariableFont_wght.ttf') format('truetype'); /* Specify the path and format */
+  font-weight: normal; /* You can specify the weight if known */
+  font-style: normal; /* Specify the style */
+}
