--- a/src/app/features/website/leaderboards/single-leaderboard/single-leaderboard.component.html
+++ b/src/app/features/website/leaderboards/single-leaderboard/single-leaderboard.component.html
@@ -4,8 +4,8 @@
     @for (participant of leaderboard.getTopThree(); track participant; let index = $index) {
       <div class="w-3/12 h-full flex flex-col justify-end items-center">
 <!--        <span class="material-icons-outlined text-3xl">account_circle</span>-->
-        <span class="font-bold">{{ participant.player }}</span>
-        <span class="text text-gray-500"> {{ participant.points }}</span>
+        <span class="font-bold text-xl">{{ participant.player }}</span>
+<!--        <span class="text text-gray-500"> {{ participant.points }}</span>-->
         <div
           [class]="{
           'h-full': index === 0,
@@ -23,6 +23,7 @@
   </div>
   <div class="absolute z-10 overflow-scroll h-full w-full">
     <div class="rounded-2xl p-5 pt-4 mt-[80%] h-5/6 overflow-hidden  backdrop-blur
+    drop-shadow-2xl
     w-full bg-white/30 flex flex-col justify-start items-center gap-4">
       <div
         class="w-1/5 border-2 border-gray-500 rounded-2xl "
@@ -32,11 +33,11 @@
         <div class="flex border-b gap-4 border-gray-400/40 pb-3 w-full "
         >
           <span class="w-1/12 text-3xl"> {{ participant.rank }}</span>
-          <div class=" w-2/12 flex flex-col justify-center">
+          <div class=" w-2/12 text-2xl font-bold flex flex-col justify-center">
             <span class="">{{ participant.player }}</span>
           </div>
           <div class="flex justify-end grow gap-2 ">
-            <span class="text-xs flex items-center">{{ participant.points}} </span>
+            <span class=" text-xl flex items-center">{{ participant.points}} </span>
           </div>
         </div>
       }
