--- a/src/app/features/website/leaderboards/leaderboards.component.html
+++ b/src/app/features/website/leaderboards/leaderboards.component.html
@@ -13,7 +13,7 @@
     <div class="relative md:pt-5 bg-white md:border-[9px] md:border-black md:rounded-[50px] overflow-hidden w-full h-full ">
       <img
         class="absolute w-full h-full -top-10 left-0 object-cover opacity-55"
-        src="../../../../assets/images/Sfondo.png"
+        src="assets/images/Sfondo.png"
       >
       <div class="w-full relative h-full overflow-hidden flex flex-col items-center gap-5">
         <p class="text-3xl font-bold p-2">Classifica Generale</p>
