--- a/docs/styles.css
+++ b/docs/styles.css
@@ -484,9 +484,6 @@ video {
 .-right-1\.5 {
   right: -0.375rem;
 }
-.-top-10 {
-  top: -2.5rem;
-}
 .-top-3 {
   top: -0.75rem;
 }
@@ -609,6 +606,9 @@ video {
 }
 .grid {
   display: grid;
+}
+.hidden {
+  display: none;
 }
 .aspect-square {
   aspect-ratio: 1 / 1;
